[tool.poetry]
name = "automacao_de_processos"
version = "0.1.0"
description = "Automatização de tarefas com Python"
authors = ["juliana228 <julianamedeiros_228@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
